# libcng-dpapi

./: CMakeLists.txt  README.md
.gear/: libcng-dpapi.spec  rules
cmake/: CNGDpApiBuildTreeSettings.cmake.in  CNGDpApiConfig.cmake.in
include/cng-dpapi/: cng-dpapi_client.h
src/: CMakeLists.txt  blob.c  blob_p.h  cng-dpapi_client.c  cng-dpapi_client.h  pkcs7.c  pkcs7_p.h  protection_descriptor.c  protection_descriptor_p.h
src/pkcs7/: AAControls.c  AAControls.h  ACClearAttrs.c  ACClearAttrs.h  AdministrationDomainName.c  AdministrationDomainName.h  AlgorithmIdentifier.c  AlgorithmIdentifier.h  AnotherName.c  AnotherName.h  AttCertIssuer.c  AttCertIssuer.h  AttCertValidityPeriod.c  AttCertValidityPeriod.h  AttCertVersion.c  AttCertVersion.h  AttCertVersionV1.c  AttCertVersionV1.h  AttrSpec.c  AttrSpec.h  Attribute.c  Attribute.h  AttributeCertificate.c  AttributeCertificate.h  AttributeCertificateInfo.c  AttributeCertificateInfo.h  AttributeCertificateInfoV1.c  AttributeCertificateInfoV1.h  AttributeCertificateV1.c  AttributeCertificateV1.h  AttributeCertificateV2.c  AttributeCertificateV2.h  AttributeType.c  AttributeType.h  AttributeTypeAndValue.c  AttributeTypeAndValue.h  AttributeValue.c  AttributeValue.h  BuiltInDomainDefinedAttribute.c  BuiltInDomainDefinedAttribute.h  (+251 more)
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  cng_dpapi_test.c
tests/auto/integration/: CMakeLists.txt
tests/auto/integration/ncrypt_protect_secret/: CMakeLists.txt  ncrypt_protect_secret_test.c
tests/auto/integration/ncrypt_unprotect_secret/: CMakeLists.txt  ncrypt_unprotect_secret_test.c
