set(LIBRARY_NAME pkcs7)

file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" )
file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")

add_library(${LIBRARY_NAME} STATIC ${SOURCES} ${HEADERS})
set_property(TARGET ${LIBRARY_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
target_include_directories(${LIBRARY_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
